Alignment issue fix (#587)

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -3709,6 +3709,10 @@ input::-webkit-inner-spin-button {
   height: auto !important;
 }
 
+.product-title-cross {
+  font-size: 8px;
+}
+
 /* ================== sprint-7 ================== */
 /* automatic manage yavolo */
 .ac-setting-tabs .nave-auto-tabs {
